# CPSC481

./: README.md
Assignment 1/: Assignment #1.docx
Assignment 2/: Assignment #2 Report.docx  turtle_testver2.cpp
Assignment 2/boxturtle/: CMakeLists.txt  boxturtle.cpp  package.xml  readme.txt
Assignment 3/: Assignment 3 Report.docx
Assignment 3/Old Version-extra/: Brain Storm.docx
Assignment 3/sourcefiles/: CMakeLists.txt  hw3.cpp  hw3.launch  package.xml  readme.txt
Assignment 4/: Assignment  4 Report.docx  Assignment 4 Q_A.docx  Documentation_.docx
Assignment 4/owlhackers_hw4_sourcefiles/: CMakeLists.txt  hw4.cpp  hw4test.cpp  package.xml  readme.txt
